# pyfaest

./: .gitignore  .pylintrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAEST_VERSION.txt  INSTALLATION.md  README.md  SECURITY.md  STRUCTURE.md  faest_build.py  pyproject.toml  quickstart.py  setup.cfg  setup.py  verify_install.py
.github/workflows/: build-libraries.yml  publish.yml
docs/: GETTING_STARTED.md
faest/: __init__.py  core.py
lib/linux/: __init__.py
lib/linux/x86_64/: __init__.py  libfaest.so.1  libfaest.so.1.0.0
lib/windows/x64/: __init__.py
