[options]
packages = find:

[options.packages.find]
exclude =
    lib
    lib.*
    include
    include.*
    scripts
    scripts.*
    tests
    tests.*
    examples
    examples.*

[options.package_data]
* =
    lib/linux/x86_64/*.so*
    lib/linux/aarch64/*.so*
    lib/macos/x86_64/*.dylib
    lib/macos/arm64/*.dylib
    lib/windows/x64/*.dll
    include/*.h
